third_party/move/move-compiler-v2/tests/match-checks/guard_binding_leak.exp

Diagnostics:
error: undeclared `y`
  ┌─ tests/match-checks/guard_binding_leak.move:8:18
  │
8 │             _ => y,
  │                  ^
